# servoV6

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
adapters/motors/: CMakeLists.txt  Motor.cpp
adapters/motors/P100S/: P100SMotor.cpp  P100SMotor.h
adapters/motors/RelayIO/: RelayController.cpp  RelayController.h  RelayIOModule.cpp  RelayIOModule.h
adapters/protocol/: BluetoothCommProtocol.cpp  BluetoothCommProtocol.h  BluetoothServoAdapter.cpp  BluetoothServoAdapter.h  CMakeLists.txt  ModbusServoAdapter.cpp  ModbusServoAdapter.h  MotorRegisterAccessor.cpp  MotorRegisterAccessor.h  SerialCommProtocol.cpp  SerialCommProtocol.h
adapters/servos/: CMakeLists.txt  GearRotaryAdapter.cpp  GearRotaryAdapter.h  LinearServoAdapter.cpp  LinearServoAdapter.h  RotaryServoAdapter.cpp  RotaryServoAdapter.h
app/: CMakeLists.txt  main.cpp
app/qml/: Bluetooth.qml  Main.qml
application/: BusinessLogic.cpp  CMakeLists.txt  MotorCommandExecutor.cpp  MotorCommandExecutor.h  SystemManager.h  UseCaseError.h
application/axis/: AxisRepository.h  AxisSyncService.h  EnableUseCase.h  IAxisDriver.h  JogAxisUseCase.h  MoveAbsoluteUseCase.h  MoveRelativeUseCase.h  StopAxisUseCase.h  TriggerAbsMoveUseCase.h  TriggerRelMoveUseCase.h
application/policy/: AbsMovePolicy.h  AutoAbsMoveOrchestrator.h  AutoRelMoveOrchestrator.h  GantryCoupleOrchestrator.h  GantryOrchestrator.h  JogOrchestrator.h  RelMovePolicy.h
application/safety/: EmergencyStopUseCase.h  ReleaseEmergencyStopUseCase.h
core/: CMakeLists.txt  CommandVisitor.h  IMotor.h  IServoAdapter.cpp  IServoAdapter.h  LinearServoAdapter.cpp  Logger.cpp  Logger.h  Motor.cpp  Motor.h  MotorCommandExecutor.h  MovementCommand.h  businesslogic.cpp  businesslogic.h
domain/: CMakeLists.txt  CommandVisitor.h  ICommProtocol.h  IMotor.h  IRegisterAccessor.h  IServoAdapter.h  MotorRegisterAccessor.cpp  MovementCommand.h  RegisterBlock.h  RegisterType.h
domain/command/: SystemCommand.h
domain/docs/: 下一阶段TDD开发任务.md  双轴龙门系统_TDD架构设计文档.md  龙门同步底层设置查询接口新增设计.md  龙门同步系统业务语义约束分析.md  龙门系统接口业务语义约束.md
domain/entity/: Axis.cpp  Axis.h  AxisId.h  ContextRejection.h  GantrySystem.h  LogicalAxis.h  PhysicalAxis.h  SystemContext.h
domain/event/: GantryEvents.h
domain/gantry/: GantryCouplingController.h  GantryCouplingState.h  GantryFeedback.h  GantryGroup.h  GantryMotorController.h  GantryPowerController.h  GantryRejection.h
domain/port/: IGantryCommandPort.h  IGantryEventBus.h  IGantryEventPublisher.h  IGantryFeedbackPort.h  IGantryStateQuery.h  IPhysicalAxisDriver.h
domain/safety/: EmergencyStopController.h  SafetyRejection.h  SafetyState.h
domain/service/: GantryCouplingService.h  GantrySafetyService.h  GantryStateAggregator.h
domain/value/: CommandResult.h  CouplingCondition.h  GantryMode.h  GantryPosition.h  MotionDirection.h  Operability.h  PositionConsistency.h  SafetyCheckResult.h
infrastructure/: CMakeLists.txt  FakeAxisDriver.h  FakeGantryCommandPort.h  FakeGantryEventBus.h  FakeGantryFeedbackPort.h  FakePLC.h  ISystemDriver.h
infrastructure/logger/: LogContext.h  Logger.h  TraceScope.h
infrastructure/plc/: AxisStateDeriver.h  ModbusSystemDriver.h
infrastructure/plc/protocol/: AsioModbusTcpClient.cpp  AsioModbusTcpClient.h  EndianPolicy.h  IModbusClient.h  MemorySnapshot.h  ModbusTcpFrame.h  PlcDevice.h  PlcPoller.cpp  PlcPoller.h  PlcSnapshot.h  PlcValue.h  ProtocolProfile.h  RegisterAddressAll.h  RegisterAddressY.h  RegisterCodec.h  RegisterMetadata.h  RegisterRegistry.h
infrastructure/transport/: CMakeLists.txt  ModbusClient.cpp
infrastructure/utils/: CommandFormatter.h  IClock.h
presentation/: CMakeLists.txt
presentation/qml/blocks/: ActionControlBlock.qml  AxisSelectorBlock.qml  ErrorPanelBlock.qml  GantryControlBlock.qml  GantryTelemetryBlock.qml  TelemetryBlock.qml
presentation/qml/components/: AxisItemDelegate.qml  IndustrialButton.qml  VelocitySettingsPopup.qml
presentation/qml/core/: Theme.qml
presentation/qml/views/: MainDashboard.qml
presentation/viewmodel/: AxisViewModelCore.cpp  AxisViewModelCore.h  EmergencyStopViewModel.h  ErrorTranslator.cpp  ErrorTranslator.h  GantryViewModel.cpp  GantryViewModel.h  GantryViewModelCore.cpp  GantryViewModelCore.h  QtAxisViewModel.cpp  QtAxisViewModel.h  QtGantryViewModel.cpp  QtGantryViewModel.h  Theme.cpp  Theme.h  ViewModelError.h
tests/: CMakeLists.txt  RelayIOModuleTest.cpp  RelayIOModuleTest.h  main.cpp  test_P100Smotor.cpp  test_adapter.cpp  test_adapter.h  test_businesslogic.cpp  test_businesslogic.h  test_gear_rotary_adapter.cpp  test_gear_rotary_adapter.h  test_main.cpp  test_motor.cpp  test_motor.h  test_motorregisteraccessor.cpp  test_motorregisteraccessor.h  test_p100smotor.cpp  test_p100smotor.h  test_serialcommprotocol.cpp  test_serialcommprotocol.h
tests/application/: test_axis_repository.cpp  test_enable_usecase.cpp  test_jog_usecase.cpp  test_move_absolute_usecase.cpp  test_move_relative_usecase.cpp  test_stop_usecase.cpp  test_system_manager.cpp
tests/application/policy/: test_abs_move_policy.cpp  test_auto_abs_move_orchestrator.cpp  test_auto_rel_move_orchestrator.cpp  test_gantry_couple_orchestrator.cpp  test_gantry_orchestrator.cpp  test_jog_orchestrator.cpp  test_rel_move_policy.cpp
tests/application/safety/: test_emergency_stop_usecase.cpp
tests/domain/: test_axis.cpp  test_axis_move_target.cpp  test_system_context.cpp
tests/domain/gantry/: test_command_result.cpp  test_gantry_activation.cpp  test_gantry_coupling.cpp  test_gantry_coupling_controller.cpp  test_gantry_coupling_service.cpp  test_gantry_coupling_state.cpp  test_gantry_direction.cpp  test_gantry_full_integration.cpp  test_gantry_group.cpp  test_gantry_mode.cpp  (+14 more)
tests/infrastructure/: test_fake_gantry_command_port.cpp  test_fake_gantry_event_bus.cpp  test_fake_gantry_feedback_port.cpp  test_fake_plc.cpp  test_modbus_system_driver.cpp  test_modbus_system_driver_edge_trigger.cpp  test_modbus_system_driver_state_derive.cpp  test_system_integration.cpp
tests/mocks/: MockMotor.h  MockServoAdapters.h
utils/: CMakeLists.txt  Logger.cpp  Logger.h  Setting.cpp  Setting.h
(+84 files in other folders)
